updated category model
