# src/controllers/category.controller.ts
@@ -1,61 +1,62 @@
+import type { Request, Response } from 'express';
 import CategoryService from '../services/category.service';
 import { success, error } from '../utils/response';
-import type { Request, Response } from 'express';
 
 class CategoryController {
   protected categoryService = new CategoryService();
 
   public getCategories = async (req: Request, res: Response) => {
     try {
-      const categories = await this.categoryService.findAllCategories();
+      const categories = await this.categoryService.findAll();
 
       return success(res, categories);
     } catch (err) {
-      return error(res, err.message, 500);
+      return error(res, err.message, err.status);
     }
   };
 
   public getCategoryById = async (req: Request, res: Response) => {
     try {
-      const categoryId = Number(req.params.id);
-      const category = await this.categoryService.findCategoryById(categoryId);
+      const categoryId = req.params.id;
+      const category = await this.categoryService.findById(categoryId);
 
       return success(res, category);
     } catch (err) {
-      return error(res, err.message, 500);
+      return error(res, err.message, err.status);
     }
   };
 
   public createCategory = async (req: Request, res: Response) => {
     try {
-      const categoryData = req.body;
-      const createdCategoryData = await this.categoryService.createCategory(categoryData);
+      const requests = req.body;
+      const createdCategoryData = await this.categoryService.create(requests);
 
-      res.status(201).json({ data: createdCategoryData, message: 'created' });
+      return success(res, createdCategoryData);
     } catch (err) {
-      return error(res, err.message, 500);
+      return error(res, err.message, err.status);
     }
   };
 
   public updateCategory = async (req: Request, res: Response) => {
     try {
-      const categoryId = Number(req.params.id);
-      const categoryData = req.body;
-      const updatedCategoryData = await this.categoryService.updateCategory(categoryId, categoryData);
-      res.status(200).json({ data: updatedCategoryData, message: 'updated' });
+      const categoryId = req.params.id;
+      const requests = req.body;
+      const updatedCategoryData = await this.categoryService.update(categoryId, requests);
+
+      return success(res, updatedCategoryData);
     } catch (err) {
-      return error(res, err.message, 500);
+      return error(res, err.message, err.status);
     }
   };
 
   public deleteCategory = async (req: Request, res: Response) => {
     try {
-      const categoryId = Number(req.params.id);
-      const deleteCategoryData = await this.categoryService.deleteCategory(categoryId);
+      const categoryId = req.params.id;
+      await this.categoryService.delete(categoryId);
 
-      res.status(200).json({ data: deleteCategoryData, message: 'deleted' });
+      return success(res, 'Category deleted successfully!');
     } catch (err) {
-      return error(res, err.message, 500);
+      return error(res, err.message, err.status);
     }
   };
 }
